tests/ui/tool-attributes/tool-attributes-misplaced-1.stderr
error: cannot find derive macro `crablangfmt` in this scope
  --> $DIR/tool-attributes-misplaced-1.rs:4:10
   |
LL | #[derive(crablangfmt)]
   |          ^^^^^^^

error: cannot find derive macro `crablangfmt` in this scope
  --> $DIR/tool-attributes-misplaced-1.rs:4:10
   |
LL | #[derive(crablangfmt)]
   |          ^^^^^^^

error: cannot find attribute `crablangfmt` in this scope
  --> $DIR/tool-attributes-misplaced-1.rs:9:3
   |
LL | #[crablangfmt]
   |   ^^^^^^^

error: cannot find macro `crablangfmt` in this scope
  --> $DIR/tool-attributes-misplaced-1.rs:15:5
   |
LL |     crablangfmt!();
   |     ^^^^^^^

error[E0573]: expected type, found tool module `crablangfmt`
  --> $DIR/tool-attributes-misplaced-1.rs:1:10
   |
LL | type A = crablangfmt;
   |          ^^^^^^^ not a type

error[E0573]: expected type, found tool attribute `crablangfmt::skip`
  --> $DIR/tool-attributes-misplaced-1.rs:2:10
   |
LL | type B = crablangfmt::skip;
   |          ^^^^^^^^^^^^^ not a type

error[E0423]: expected value, found tool module `crablangfmt`
  --> $DIR/tool-attributes-misplaced-1.rs:14:5
   |
LL |     crablangfmt;
   |     ^^^^^^^ not a value

error[E0423]: expected value, found tool attribute `crablangfmt::skip`
  --> $DIR/tool-attributes-misplaced-1.rs:17:5
   |
LL |     crablangfmt::skip;
   |     ^^^^^^^^^^^^^ not a value

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0423, E0573.
For more information about an error, try `crablangc --explain E0423`.
